fix link running off screen in mobile view

--- a/workout-tracker/src/components/MainNavBar/NavigationItems/NavigationItems.css
+++ b/workout-tracker/src/components/MainNavBar/NavigationItems/NavigationItems.css
@@ -12,7 +12,7 @@
 }
 
 @media (max-width: 1000px) {
-  .navigation-item:nth-last-child(n + 3) {
+  .navigation-item:nth-last-child(n + 2) {
     display: none;
   }
 }
